# turbomodal

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  filestructure.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml  testing.yml
.plans/: cad-visualization.md
docs/: architecture.md  installation.md  ml-guide.md  quickstart.md  validation.md
docs/api/: analysis.md  core.md  data.md  ml.md  optimization.md  signals.md
examples/: data_generation_pipeline.py  generate_visualizations.py  ml_pipeline.py  python_example.py
include/turbomodal/: added_mass.hpp  assembler.hpp  common.hpp  cyclic_solver.hpp  damping.hpp  element.hpp  forced_response.hpp  hermitian_lanczos.hpp  material.hpp  mesh.hpp  mistuning.hpp  modal_solver.hpp  mode_identification.hpp  potential_flow.hpp  rotating_effects.hpp  static_condensation.hpp  sym_shift_invert_ldlt.hpp
python/tests/: conftest.py  test_dataset.py  test_integration.py  test_io.py  test_mac.py  test_ml.py  test_noise.py  test_optimization.py  test_parametric.py  test_python_bindings.py  test_sensors.py  test_signal_gen.py  test_solver.py  test_utils.py  test_validation_python.py  test_viz.py
python/turbomodal/: __init__.py  _core.pyi  _utils.py  bc_editor.py  dataset.py  io.py  mac.py  noise.py  parametric.py  sensors.py  signal_gen.py  solver.py  viz.py
python/turbomodal/ml/: __init__.py  features.py  models.py  pipeline.py
python/turbomodal/optimization/: __init__.py  explainability.py  sensor_placement.py
src/: added_mass.cpp  assembler.cpp  compat_hash.c  cyclic_solver.cpp  damping.cpp  element.cpp  forced_response.cpp  hermitian_lanczos.cpp  material.cpp  mesh.cpp  mistuning.cpp  modal_solver.cpp  mode_identification.cpp  potential_flow.cpp  python_bindings.cpp  rotating_effects.cpp  static_condensation.cpp
tests/: test_added_mass.cpp  test_assembler.cpp  test_cyclic.cpp  test_damping.cpp  test_element.cpp  test_forced_response.cpp  test_integration.cpp  test_material.cpp  test_mesh.cpp  test_mistuning.cpp  test_mode_identification.cpp  test_potential_flow.cpp  test_rotating.cpp  test_solver.cpp  test_validation.cpp
tests/test_data/: blade_sector.msh  generate_blade_sector.py  generate_leissa_mesh.py  generate_test_mesh.py  generate_test_sector.py  leissa_disk_sector.msh  test_disk_sector.brep  test_disk_sector.step  test_sector.brep  test_sector.step  wedge_sector.msh
tests/test_data/.plans/: eager-drifting-finch.md
