[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "turbomodal"
version = "0.1.0"
description = "Cyclic symmetry FEA solver for turbomachinery modal analysis"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pyvista>=0.43",
    "matplotlib>=3.5",
    "gmsh>=4.12",
    "meshio>=5.3",
    "h5py>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
ml = [
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "torch>=2.0",
    "shap>=0.42",
    "optuna>=3.0",
    "mlflow>=2.10",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_TESTS=OFF", "-DBUILD_PYTHON=ON", "-DUSE_OPENMP=OFF"]
wheel.packages = ["python/turbomodal"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
test-command = "python -c \"import turbomodal\""

[tool.cibuildwheel.linux]
before-all = "git submodule update --init --recursive"

[tool.cibuildwheel.macos]
before-all = "git submodule update --init --recursive"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
before-all = "git submodule update --init --recursive"
archs = "AMD64"
