[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "turbomodal"
dynamic = ["version"]
description = "Cyclic symmetry FEA solver for turbomachinery modal analysis"
license = { text = "MIT" }
authors = [{ name = "Adam Moëc" }]
requires-python = ">=3.9"
keywords = [
    "finite-element",
    "modal-analysis",
    "cyclic-symmetry",
    "turbomachinery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pyvista>=0.43",
    "matplotlib>=3.5",
    "gmsh>=4.12",
    "meshio>=5.3",
    "Pillow>=9.0",
]

[project.urls]
Repository = "https://github.com/amoec/turbomodal"
Documentation = "https://github.com/amoec/turbomodal/tree/main/docs"
"Bug Tracker" = "https://github.com/amoec/turbomodal/issues"
Changelog = "https://github.com/amoec/turbomodal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_file = "python/turbomodal/_version.py"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_TESTS=OFF", "-DBUILD_PYTHON=ON", "-DUSE_OPENMP=OFF"]
wheel.packages = ["python/turbomodal"]

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
test-command = "python -c \"import turbomodal\""

[tool.cibuildwheel.linux]
before-all = "yum install -y openblas-devel && git submodule update --init --recursive"

[tool.cibuildwheel.macos]
before-all = "git submodule update --init --recursive"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
before-all = "git submodule update --init --recursive"
archs = "AMD64"

[tool.pytest.ini_options]
markers = [
    "validation: slow validation tests against analytical benchmarks",
    "slow: tests taking more than a few seconds",
]
